photo album update - added basic functionality - add album - upload photos
TODO
- delete photos
- fix album preview
-

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.2.0
   firebase_database: ^6.1.2
+  firebase_storage: ^8.1.0
+  image_picker: ^0.7.5+3
+  cloud_firestore: ^2.2.0
+  path_provider: ^2.0.2
+  permission_handler: ^8.0.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,6 +56,7 @@ flutter:
     - assets/loginsplash.png
     - assets/healthcare.png
     - assets/milkbottle.png
+    - assets/newalbum.png
 #     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
