--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^1.4.1
+  fluttertoast: ^8.0.7
   firebase_core: ^1.2.0
   firebase_database: ^6.1.2
   firebase_storage: ^8.1.0
