--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^1.4.1
+  shared_preferences: ^2.0.6
   fluttertoast: ^8.0.7
   firebase_core: ^1.2.0
   firebase_database: ^6.1.2
