--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
     - assets/healthcare.png
     - assets/milkbottle.png
     - assets/newalbum.png
+    - assets/nurses.png
+    - assets/heart.png
 #     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
