--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   path_provider: ^2.0.2
   permission_handler: ^8.0.0+2
   image_downloader: ^0.20.1
+  get: ^4.1.4
+  circular_profile_avatar: ^1.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
