--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission_handler: ^8.0.0+2
   image_downloader: ^0.20.1
   provider: ^5.0.0
+  percent_indicator: "^2.1.7+2"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
