--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   permission_handler: ^8.0.0+2
   image_downloader: ^0.20.1
   provider: ^5.0.0
-  # create pdf document
   pdf: ^3.1.0
   get: ^4.1.4
   circular_profile_avatar: ^1.0.8
+  uuid: ^3.0.4
 
+  percent_indicator: "^2.1.7+2"
   # open pdf document
   open_file: ^3.1.0
 
