update to milestone guidance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.1.4
   circular_profile_avatar: ^1.0.8
   uuid: ^3.0.4
+  dio: ^4.0.0
 
   percent_indicator: "^2.1.7+2"
   # open pdf document
