/Darrell/Development Update v1.0
Implemented Fenton Chart successfully.

Remaining:
- 5 percentile line series for each chart and gender

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_document_picker: ^4.0.0
   syncfusion_flutter_pdfviewer: ^19.2.48-beta
   percent_indicator: "^2.1.7+2"
+  syncfusion_flutter_charts: ^19.2.51
   # open pdf document
   open_file: ^3.1.0
 
